tests/comp/sem/invalid/unqualified_call_main.mj
class Evil {
	public void test() {}

	public static void main(String[] args) {
		/*** test(); ***/
    }
}
